Fix(style) Layout issues

--- a/src/styles/components/splitView/__splitView.sass
+++ b/src/styles/components/splitView/__splitView.sass
@@ -38,7 +38,7 @@
 .splitview_detail
     border: pxToRem(1) solid $uni-color-legend
     border-radius: pxToRem(5)
-    padding: 1rem
+    padding: 2rem 0
     align-self: stretch
     max-width: calc(100% - 15rem)
     min-width: 66%
