--- a/src/styles/specifics/salary/_salaryTrans.sass
+++ b/src/styles/specifics/salary/_salaryTrans.sass
@@ -237,7 +237,6 @@ salarytrans
 
 payrollrun-details .entityDetails
     uni-section
-        width: 87.5vw
         display: block
         margin: 2rem auto
 
