--- a/src/styles/unibase/forms/_fieldset.sass
+++ b/src/styles/unibase/forms/_fieldset.sass
@@ -1,18 +1,20 @@
 fieldset
     width: calc(50% - 2rem)
-    max-width: 44rem
+    max-width: pxToRem(650)
+    min-width: pxToRem(450)
     border: 0
     margin: 1rem
     padding: .1rem
 
     legend
-        @extend h2
+        font-size: 1.2rem
+        font-weight: 300
         display: block
         width: 100%
-        height: 2rem
-        margin: 0 0 1rem
-        padding: 0 .5rem
-        line-height: 2rem
+        height: 1.9rem
+        line-height: 1.9rem
+        margin: 0 0 .5rem
+        padding: 0 1rem
         background: $uni-color-legend
 
     section.fieldset-column-container
@@ -21,4 +23,4 @@ fieldset
         section.fieldset-column
             flex-grow: 1
             height: auto
-            margin: 0 .5rem
+            margin: 0 0 0 1rem
